# website

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile.toml  naked.ftl  prod_settings.toml  self_cert.pem  self_key.pem  settings.toml
locales/: de.ftl  en.ftl  fr.ftl  naked.ftl
locales/de/: main.ftl
locales/en/: main.ftl
locales/fr/: main.ftl
locales/he/: main.ftl
src/: handlers.rs  langs.rs  main.rs
static/: style.css
templates/: faq.html  footer.html  header.html  index.html  page.html
