[package]
name = "euroka3d"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
askama = "0.12.1"
env_logger = "0.11.1"
fluent = "0.16.0"
log = "0.4.20"
unic-langid = "0.9.4"
