[package]
name = "euroka3d"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
askama = "0.12.1"
config = "0.14.0"
either = { version = "1.10.0", features = ["serde"] }
env_logger = "0.11.1"
fluent = "0.16.0"
fluent-templates = "0.8.0"
futures-util = "0.3.30"
log = { version = "0.4.20", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
unic-langid = "0.9.4"
